--- a/src/app/messages/partials/message/post-cards.scss
+++ b/src/app/messages/partials/message/post-cards.scss
@@ -125,6 +125,18 @@
     border-color: $color-calm;
     margin: 12px auto 0 auto;
   }
+  .post-subject {
+    h3 {
+      margin: 8px 0;
+      font-size: 24px;
+      line-height: 29px;
+      //word-break: break-all;
+      width: 100%;
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
   .post-card-badge {
     background-color: transparent;
     justify-content: flex-end;
@@ -333,6 +345,9 @@
       @extend ._txe;
     }
   }
+  &.ribbon {
+    margin-bottom: -3px;
+  }
 }
 
 post-card {
@@ -357,18 +372,6 @@ post-card {
 }
 h3 {
   font-weight: 100;
-}
-.post-card .post-subject{
-  h3 {
-    margin: 8px 0;
-    font-size: 24px;
-    line-height: 29px;
-    //word-break: break-all;
-    width: 100%;
-    &:hover{
-      cursor: pointer;
-    }
-  }
 }
 .post-card .post-attachments{
   //height: 66px;
