--- a/src/stylesheets/nested/popovers.scss
+++ b/src/stylesheets/nested/popovers.scss
@@ -154,12 +154,6 @@
   color: $color-solid;
 }
 
-.line-f {
-  height: 1px;
-  background-color: $color-breeze-50;
-  width: 100%;
-  position: absolute;
-}
 .line-popover {
   height: 1px;
   background-color: $color-breeze-50;
